--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,9 @@
             <p> Whether it’s a sleek design, smart functionality, or top-notch support, we bring our A-game every time.
                 Our mission? To turn ideas into powerful digital solutions that actually matter.</p>
             <p> And the best part? We have fun doing it.</p>
+            <a href="index.html" class="home-icon">
+                              <img src="./imgs/home.jpg" alt="Home" />
+                        </a>
         </div>
         <div class="contact-form">
             <h2>Contact Us</h2>
