--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <h1>Phone Book</h1>
             <div class="home-buttons">
                   <a href="contact.html" class="btn-about">About Us / Contact Us</a>
+                    <a href="gallery.html" class="btn-gallery">Gallery</a>
             </div>
       </header>
       <main>
@@ -59,5 +60,6 @@
 
       <script src="index.js "></script>
 </body>
+
 
 </html>
